--- a/1.5.2/kube-flannel-arm.yml
+++ b/1.5.2/kube-flannel-arm.yml
@@ -1,24 +1,23 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: kube-flannel-ds
+  name: kube-flannel-arm-ds
   labels:
     tier: node
-    app: flannel-amd64
+    app: flannel-arm
 spec:
   template:
     metadata:
       labels:
         tier: node
-        app: flannel-amd64
+        app: flannel-arm
     spec:
       hostNetwork: true
       nodeSelector:
-        beta.kubernetes.io/arch: amd64
-      serviceAccountName: flannel
+        beta.kubernetes.io/arch: arm
       containers:
-      - name: kube-flannel
-        image: quay.io/coreos/flannel:v0.7.0-amd64
+      - name: kube-flannel-arm
+        image: quay.io/coreos/flannel:v0.7.0-arm
         command: [ "/opt/bin/flanneld", "--ip-masq", "--kube-subnet-mgr" ]
         securityContext:
           privileged: true
@@ -36,8 +35,8 @@ spec:
           mountPath: /run
         - name: flannel-cfg
           mountPath: /etc/kube-flannel/
-      - name: install-cni
-        image: quay.io/coreos/flannel:v0.7.0-amd64
+      - name: install-cni-arm
+        image: quay.io/coreos/flannel:v0.7.0-arm
         command: [ "/bin/sh", "-c", "set -e -x; cp -f /etc/kube-flannel/cni-conf.json /etc/cni/net.d/10-flannel.conf; while true; do sleep 3600; done" ]
         volumeMounts:
         - name: cni
